--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
+
 {
-  "name": "",
+  "name": "stark-os-echoes",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@mediapipe/tasks-vision": "^0.10.14",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@react-three/drei": "^10.7.7",
-    "@google/genai": "^1.34.0",
-    "@react-three/fiber": "^9.5.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/three": "^0.172.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11"
   }
 }
