--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "stark-os-echoes",
   "private": true,
@@ -22,6 +21,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/three": "^0.172.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.7.3",
     "vite": "^6.0.11"
   }
