--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "stark-os-echoes",
   "private": true,
@@ -18,6 +19,7 @@
     "three": "^0.182.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.7",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/three": "^0.172.0",
